# Version 1.3:
Optimization: Prefetch moves sooner (~2.5% speedup)
Refactored into C++ class: ListT -> arctic::List (~1.2% speedup)

# Version 1.2:
Refactored MoveT struct (added methods, removed unaligned load/store assumption)
Bugfix: fixed csOO + csFIDE-style strings never showing check(mate).
Converted code to use platform-agnostic std::thread.
Implemented platform-agnostic Semaphore class and converted everyone to use it.
Updated license from LGPL 2 to MPL 2.0 (except conio.[ch])
uiXboard: fix bad "ping" command handling in extremely rare cases; fix poorly
    formatted error strings (no newline!); slightly better error handling;
    implemented "hint" command.
Displayed search depth now consistently starts at 1, not 0.
Bugfix: fix think time w/infinite clock but per-move limit.
Bugfix: crash when switching on the fly from xboard to uci interface
uiUci: handle 'ponder + searchmoves' sanely; attempt to report a bestmove when
    we stop pondering; more correct ponder info and score.
Refactored into C++ classes: SpinlockT -> arctic::Spinlock (1.6% speedup +
    platform-agnostic), PvT -> (SearchPv, DisplayPv, HintPv), GameT -> Game,
    TransTable* functionality -> Trans(Position)Table, SaveGameT -> SaveGame,
    SwitcherContextT -> Switcher, history heuristic functionality ->
    HistoryWindow, ThinkContextT -> (Engine, Thinker).
Bugfix: fix bad parsing of user-specified transposition table size > 4 GiB.
Made number of search threads configurable from uiUci and uiXboard.
Bugfix: moveToStringMnSAN(): fix overly zealous move disambiguation.
Work for github upload: better documentation; dump errlog in a better place;
    introduce cmake options for friendlier build; fix gcc-6.2 build issues

# Version 1.1:
Build improvements: use Git for version control, cmake for building
Bugfix: uiXboard: handle 0 increment and 0 moves per timecontrol properly
Bugfix: uiUci: fix 'searchMoves' parameter handling (untested)